--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,10 @@ body {
   padding-top: 10px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  display: grid;
+    grid-template-columns: 1fr;
   grid-template-rows: repeat(5, 1fr);
   grid-template-areas:
+    "intro"
     "intro"
     "about"
     "previous"
@@ -109,6 +110,7 @@ nav {
   border-radius: 10px;
   font-weight: bold;
   border-bottom: 10px solid #8d714f;
+  border-left: 10px solid #8d714f;
   animation: fadeIn 3.5s;
 }
 
@@ -118,33 +120,12 @@ nav {
   border: 5px solid #c59366;
 }
 
-.aboutSection {
-    grid-area: about;
-  background-color: #c59366;
-    margin: 10px;
+.section {
+    background-color: #c59366;
+    margin: 50px 10px 10px 10px;
     border-radius: 10px;
-    min-height: 750px;
-  border-bottom: 10px solid #8d714f;
-}
-
-#aboutAnchor {
-    padding: 125px;
-}
-
-.myImage {
-    height: 50vh;
-    width: 30vw;
-    margin-left: 20px;
-    border-radius: 10px;
-  border: 10px solid #8d714f;
-}
-
-.aboutText{
-    width: 50vw;
-    height: 50vh;
-    display: inline-block;
-    padding-left: 30px;
-    color: #331e05;
+    border-bottom: 10px solid #8d714f;
+    border-left: 10px solid #8d714f;
 }
 
 .sectionHeader {
@@ -152,6 +133,54 @@ nav {
     color: #331e05;
     margin: 20px;
     border-bottom: 4px solid #331e05;
+    text-align: left;
+}
+
+.image {
+    border-radius: 10px;
+    border: 10px solid #8d714f;
+}
+
+#aboutAnchor {
+    padding: 125px;
+}
+
+#aboutSection {
+    grid-area: about;
+    min-height: 850px;
+    max-width: 70vw;
+    margin: 0 auto;
+    float: center;
+}
+
+#aboutContent{
+    display: inline-flex;
+}
+
+#myImage {
+    width: 25vw;
+    margin-left: 20px;
+}
+
+.aboutText{
+    width: 35vw;
+    height: 50vh;
+    padding-left: 30px;
+    color: #331e05;
+}
+
+
+
+#previousSection {
+    grid-area: previous;
+    text-align: center;
+    margin: 0 auto;
+    max-width: 1000px;
+    min-height: 1250px;
+}
+
+#resume {
+    width: 43vw;
 }
 
 @keyframes fadeIn {
