--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ body {
   padding-top: 10px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    display: grid;
-    grid-template-columns: auto;
+  display: grid;
+  grid-template-columns: auto;
   grid-template-rows: repeat(5, auto);
   grid-template-areas:
     "intro"
@@ -25,9 +25,9 @@ p {
 }
 
 nav {
-    margin: 0;
-    height: 0;
-    animation: fadeIn 2s;
+  margin: 0;
+  height: 0;
+  animation: fadeIn 2s;
 }
 
 .hidden {
@@ -125,70 +125,70 @@ nav {
 }
 
 .section {
-    background-color: #c59366;
-    margin: 50px 10px 10px 10px;
-    border-radius: 10px;
-    border-bottom: 10px solid #8d714f;
-    border-left: 10px solid #8d714f;
+  background-color: #c59366;
+  margin: 50px 10px 10px 10px;
+  border-radius: 10px;
+  border-bottom: 10px solid #8d714f;
+  border-left: 10px solid #8d714f;
 }
 
 .sectionHeader {
-    font-size: 3vw;
-    color: #331e05;
-    margin: 20px;
-    border-bottom: 4px solid #331e05;
-    text-align: left;
+  font-size: 3vw;
+  color: #331e05;
+  margin: 20px;
+  border-bottom: 4px solid #331e05;
+  text-align: left;
 }
 
 .image {
-    border-radius: 10px;
-    border: 10px solid #8d714f;
+  border-radius: 10px;
+  border: 10px solid #8d714f;
 }
 
 .anchor {
-    padding: 10vh;
+  padding: 10vh;
 }
 
 #aboutSection {
-    grid-area: about;
-    min-height: 50vh;
-    max-width: 70vw;
-    margin: 0 auto;
-    float: center;
-    flex-wrap: nowrap;
-    overflow: hidden;
+  grid-area: about;
+  min-height: 50vh;
+  max-width: 70vw;
+  margin: 0 auto;
+  float: center;
+  flex-wrap: nowrap;
+  overflow: hidden;
 }
 
-#aboutContent{
-    display: inline-flex;
+#aboutContent {
+  display: inline-flex;
 }
 
 #myImage {
-   max-width: 25vw;
-   max-height: 65vh;
-    margin-left: 20px;
+  max-width: 25vw;
+  max-height: 65vh;
+  margin-left: 20px;
 }
 
-.aboutText{
-    max-width: 35vw;
-    min-height: 0vw;
-    padding-left: 30px;
-    color: #331e05;
+.aboutText {
+  max-width: 35vw;
+  min-height: 0vw;
+  padding-left: 30px;
+  color: #331e05;
 }
 
 #previousSection {
-    grid-area: previous;
-    text-align: center;
-    margin: 0 auto;
-    max-width: 45vw;
-    max-height: 110vh;
-    padding-top: 1px;
-    padding-bottom: 20px;
+  grid-area: previous;
+  text-align: center;
+  margin: 0 auto;
+  max-width: 45vw;
+  max-height: 110vh;
+  padding-top: 1px;
+  padding-bottom: 20px;
 }
 
 #resume {
-    max-width: 38vw;
-    max-height: 100vh;
+  max-width: 38vw;
+  max-height: 100vh;
 }
 
 #projectsSection {
@@ -232,9 +232,6 @@ nav {
   max-width: 50vw;
 }
 
-#project1Text {
-}
-
 .githubLink {
   min-height: 10vh;
   min-width: 10vw;
@@ -274,11 +271,7 @@ nav {
   min-width: 30vw;
 }
 
-#project2Text {
-
-}
-
-#contactSection{
+#contactSection {
   margin: 0 auto;
   text-align: center;
   max-width: 30vw;
@@ -312,7 +305,8 @@ nav {
   background-color: #e3d9c9;
   border-bottom: 5px solid #8d714f;
   border-left: 5px solid #8d714f;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: #331e05;
   font-size: 1vw;
 }
@@ -348,7 +342,7 @@ nav {
   border-left: 5px solid #c59366;
 }
 
-#btn-secondary { 
+#btn-secondary {
   min-width: 5vw;
   min-height: 5vh;
   margin: 0 auto;
@@ -382,7 +376,6 @@ nav {
 }
 
 @media (min-width: 576px) and (max-width: 992px) {
-
   .introTextBox {
     text-align: left;
     margin: 0 auto;
@@ -393,7 +386,7 @@ nav {
   #introText {
     padding-top: 10vw;
     font-size: 14vw;
-  }  
+  }
 
   #startButton {
     margin: 0 auto;
@@ -405,7 +398,7 @@ nav {
     min-height: 15vh;
   }
 
-  #aboutSection{
+  #aboutSection {
     text-align: center;
     min-width: 90vw;
   }
